--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Things",
-  "version": "2.1.20",
+  "name": "Things Fork",
+  "version": "2.1.21",
   "minAppVersion": "1.0.0",
-  "author": "@colineckert",
-  "authorUrl": "https://twitter.com/colineckert"
+  "author": "@camfisk",
+  "authorUrl": "https://camfisk.com"
 }
